--- a/index.html
+++ b/index.html
@@ -1,37 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>(20170640)(조해찬)</title>
-    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
-    <link href="capital_game.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
-  </head>
   <body>
-      <div class="entire">
-      <h1>Do you know the capital of this country?</h1>
-      <table>
-          <tr>
-              <th>Country</th>
-              <th>Capital</th>
-              <th>Answer</th>
-          </tr>
-          <tr>
-              <td>Republic of Korea</td>
-              <td><input type="text"></td>
-              <td><button>See Answer</button></td>     
-          </tr>
-          <tr class="correct">
-              <td>Japan</td>
-              <td>Tokyo</td>
-              <td><i class="fas fa-check"></i></td>
-          </tr>
-          <tr class="incorrect">
-              <td>United States of America</td>
-              <td style="text-decoration: line-through;">New York</td>
-              <td>Washington, D.C.</td>
-          </tr>
-      </table>
-      </div>
+    <h1>포트폴리오, 이력서</h1>    
+    <h2>조해찬 (Haechan Jo)</h2>
+    <p>+82 10-2888-3142
+      <a href="mailto:jhcs0609@gmail.com">jhcs0609@gmail.com</a>
+      </p>
+    <h2>관심 분야</h2>
+    <p>-데이터사이언스, 머신러닝, 딥러닝 등등 -금융 -경영? 등등 -창업</p>
+    <h2>기술 스택</h2>
+    <h2>학력</h2>
+    <ul>
+      <li>2017.03 ~ 현재 : 한국과학기술원, KAIST</li>
+    </ul>
+    <h2>경력</h2>
+    <h3>2018.03 ~ 현재 : KAIST 앱 개발 동아리, INCLUDE 활동 (웹 개발 및 디자인)</h3>
+    <p>웹스터디에 참여했습니다.</p>
+    <h2>경험, 활동</h2>
   </body>
 </html>
